<resources>
    <string name="app_name">Quiz App</string>
    <string name="intro">This is a General Knowledge Quiz \nThere are a total of 7 questions.</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">question 4</string>
    <string name="q5">question 5</string>
    <string name="q6">question 6</string>
    <string name="q1">question 1</string>
    <string name="name">Name</string>
    <string name="question1">The largest desert in the world is </string>
    <string name="question2">Mount Everest is located in?</string>
    <string name="question3">The largest river in India is ?</string>
    <string name="question4">The total number of states in India are</string>
    <string name="question5">The hottest planet in the solar system is?</string>
    <string name="question6">Which of the following are search engines?</string>
    <string name="submit">Submit</string>
    <string name="option1.1">Sahara</string>
    <string name="option1.2">Kalahari</string>
    <string name="option1.3">Thar</string>
    <string name="option1.4">Sonoron</string>
    <string name="option2.1">India</string>
    <string name="option2.2">Nepal</string>
    <string name="option2.3">Tibet</string>
    <string name="option2.4">China</string>
    <string name="option3.1">Yamuna</string>
    <string name="option3.2">Kaveri</string>
    <string name="option3.3">Ganga</string>
    <string name="option3.4">Brahmaputra</string>
    <string name="option4.1">25</string>
    <string name="option4.2">28</string>
    <string name="option4.3">27</string>
    <string name="option4.4">29</string>
    <string name="option5.1">Earth</string>
    <string name="option5.2">Venus</string>
    <string name="option5.3">Mars</string>
    <string name="option5.4">Mercury</string>
    <string name="option6.1">Google</string>
    <string name="option6.2">Bing</string>
    <string name="option6.3">Facebook</string>
    <string name="option6.4">Dropbox</string>
    <string name="question7">What is the capital of India?</string>
    <string name="q7">question 7</string>
</resources>
