<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingBottom="16dp"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            style="@style/questions"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <TextView
            style="@style/question_no"
            android:text="@string/q1" />

        <TextView
            style="@style/questions"
            android:text="@string/question1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_a"
                style="@style/options"
                android:text="@string/option1.1" />

            <RadioButton
                android:id="@+id/q1_b"
                style="@style/options"
                android:text="@string/option1.2" />

            <RadioButton
                android:id="@+id/q1_c"
                style="@style/options"
                android:text="@string/option1.3" />

            <RadioButton
                android:id="@+id/q1_d"
                style="@style/options"
                android:text="@string/option1.4" />
        </RadioGroup>

        <TextView
            style="@style/question_no"
            android:text="@string/q2" />

        <TextView
            style="@style/questions"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_a"
                style="@style/options"
                android:text="@string/option2.1" />

            <RadioButton
                android:id="@+id/q2_b"
                style="@style/options"
                android:text="@string/option2.2" />

            <RadioButton
                android:id="@+id/q2_c"
                style="@style/options"
                android:text="@string/option2.3" />

            <RadioButton
                android:id="@+id/q2_d"
                style="@style/options"
                android:text="@string/option2.4" />
        </RadioGroup>


        <TextView
            style="@style/question_no"
            android:text="@string/q3" />

        <TextView
            style="@style/questions"
            android:text="@string/question3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3_a"
                style="@style/options"
                android:text="@string/option3.1" />

            <RadioButton

                android:id="@+id/q3_b"
                style="@style/options"
                android:text="@string/option3.2" />

            <RadioButton

                android:id="@+id/q3_c"
                style="@style/options"
                android:text="@string/option3.3" />

            <RadioButton

                android:id="@+id/q3_d"
                style="@style/options"
                android:text="@string/option3.4" />
        </RadioGroup>


        <TextView
            style="@style/question_no"
            android:text="@string/q4" />

        <TextView
            style="@style/questions"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_a"
                style="@style/options"
                android:text="@string/option4.1" />

            <RadioButton

                android:id="@+id/q4_b"
                style="@style/options"
                android:text="@string/option4.2" />

            <RadioButton

                android:id="@+id/q4_c"
                style="@style/options"
                android:text="@string/option4.3" />

            <RadioButton

                android:id="@+id/q4_d"
                style="@style/options"
                android:text="@string/option4.4" />
        </RadioGroup>


        <TextView
            style="@style/question_no"
            android:text="@string/q5" />

        <TextView
            style="@style/questions"
            android:text="@string/question5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q5_a"
                style="@style/options"
                android:text="@string/option5.1" />

            <RadioButton

                android:id="@+id/q5_b"
                style="@style/options"
                android:text="@string/option5.2" />

            <RadioButton

                android:id="@+id/q5_c"
                style="@style/options"
                android:text="@string/option5.3" />

            <RadioButton

                android:id="@+id/q5_d"
                style="@style/options"
                android:text="@string/option5.4" />
        </RadioGroup>


        <TextView
            style="@style/question_no"
            android:text="@string/q6" />

        <TextView
            style="@style/questions"
            android:text="@string/question6" />

        <CheckBox
            android:id="@+id/q6_a"
            style="@style/options"
            android:text="@string/option6.1" />

        <CheckBox

            android:id="@+id/q6_b"
            style="@style/options"
            android:text="@string/option6.2" />

        <CheckBox

            android:id="@+id/q6_c"
            style="@style/options"
            android:text="@string/option6.3" />

        <CheckBox

            android:id="@+id/q6_d"
            style="@style/options"
            android:text="@string/option6.4" />

        <TextView
            style="@style/question_no"
            android:text="@string/q7" />

        <TextView
            style="@style/questions"
            android:text="@string/question7" />

        <EditText
            android:id="@+id/answer7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submit"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
